# Distributed_Lab_Tasks

./: .gitignore  .gitmodules  README.md
Task1_Order_book/: CMakeLists.txt  README.md
Task1_Order_book/src/: MainWindow.cpp  MainWindow.h  consolereader.h  main.cpp  orderbook.cpp  orderbook.h  ordertablemodel.cpp  ordertablemodel.h  resources.qrc  users.cpp  users.h
Task1_Order_book/ui/: MainWindow.ui
Task2_Maze/: CMakeLists.txt  CMakePresets.json  README.md
Task2_Maze/src/: main.cpp
Task3_Website_analytics/: CMakeLists.txt  README.md  day1.csv  day2.csv
Task3_Website_analytics/src/: main.cpp
Task4_Hitler_crawler_version1/: Makefile  README.md
Task4_Hitler_crawler_version1/src/: main.cpp
Task4_Hitler_crawler_version2/: CMakeLists.txt  README.md
Task4_Hitler_crawler_version2/src/: main.cpp
Task8_Students_capital/: CMakeLists.txt  README.md  task8
Task8_Students_capital/src/: main.cpp
